@@ -33,9 +33,9 @@
 #define	USED
 #endif
 #ifdef	UCB
-static const char sccsid[] USED = "@(#)/usr/ucb/df.sl	1.65 (gritter) 1/22/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/df.sl	1.66 (gritter) 5/8/06";
 #else
-static const char sccsid[] USED = "@(#)df.sl	1.65 (gritter) 1/22/06";
+static const char sccsid[] USED = "@(#)df.sl	1.66 (gritter) 5/8/06";
 #endif
 
 /*
@@ -50,10 +50,17 @@ typedef		unsigned long long	ull;
 #include	<pwd.h>
 #include	<sys/types.h>
 #include	<sys/stat.h>
-#if defined (__dietlibc__) || defined (__NetBSD__) || defined (__OpenBSD__)
+#if defined (__dietlibc__) || defined (__OpenBSD__)
 #include	"statvfs.c"
 #elif defined (__FreeBSD__) && (__FreeBSD__) < 5
 #include	"statvfs.c"
+#elif defined (__NetBSD__)
+#include	<sys/param.h>
+#if __NetBSD_Version__ < 300000000
+#include	"statvfs.c"
+#else	/* __ __NetBSD_Version__ >= 300000000 */
+#include	<sys/statvfs.h>
+#endif	/* __ __NetBSD_Version__ >= 300000000 */
 #else
 #include	<sys/statvfs.h>
 #endif
